--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "karma": "^0.13.14",
     "karma-firefox-launcher": "^0.1.7",
+    "karma-chrome-launcher": "^0.2.1",
     "karma-jasmine": "^0.3.6",
     "http-server":"^0.8.5"  
   }
