update readme about how to test jquery with jasmine in karma

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "karma",
     "unit",
     "test",
-    "angular"
+    "angular",
+    "jquery",
+    "dom",
+    "event"
   ],
   "homepage": "https://github.com/navyxie/karma-unit",
   "author": "navyxie",
